# checkupgrades

./: Cargo.toml
src/: alpm.rs  main.rs  sync.rs
